--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@learnapp-co/backend-lib-boilerplate",
-  "version": "0.1.3",
-  "description": "The awesome boilerplate for backend reusable libraries",
-  "author": "Sohail Alam",
+  "name": "@hitesh22b/nestjs-iam",
+  "version": "0.0.0",
+  "description": "The awesome identity access management library.",
+  "author": "Hitesh Balwani",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
@@ -31,15 +31,14 @@
     "registry": "https://npm.pkg.github.com/@learnapp-co"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.18"
+    "@nestjs/common": "^8.4.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^10.0.0",
-    "@learnapp-co/la-lib-docs": "^0.2.3",
-    "@nestjs/platform-express": "^7.6.18",
+    "@nestjs/platform-express": "^8.4.7",
     "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.6.18",
+    "@nestjs/testing": "^8.4.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.17.14",
